--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </transition>
 
           <p class="text-xs text-gray-500 text-center pt-4">
-            Made with ❤️ using Vue & TailwindCSS
+            Made with ❤️ using Vue & TailwindCSS by <a target="_BLANK" href="https://github.com/thecapt1917"><b>thecapt1917</b></a>
           </p>
 
           <!-- Toast Notification (for successful copy) -->
